// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Heading with different levels 1`] = `
.c0 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 0;
}

.c0:first-child {
  margin-top: 0;
}

.c0:last-child {
  margin-bottom: 0;
}

.c0 .c1 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

<hundefined
  className="c0"
/>
`;

exports[`renders Heading with different levels 2`] = `
.c0 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 0;
}

.c0:first-child {
  margin-top: 0;
}

.c0:last-child {
  margin-bottom: 0;
}

.c0 .c1 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

<hundefined
  className="c0"
/>
`;

exports[`renders Heading with different levels 3`] = `
.c0 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 0;
}

.c0:first-child {
  margin-top: 0;
}

.c0:last-child {
  margin-bottom: 0;
}

.c0 .c1 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

<hundefined
  className="c0"
/>
`;

exports[`renders Heading with text 1`] = `
.c0 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 0;
}

.c0:first-child {
  margin-top: 0;
}

.c0:last-child {
  margin-bottom: 0;
}

.c0 .c1 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

<hundefined
  className="c0"
>
  Heading
</hundefined>
`;

exports[`renders Heading without props 1`] = `
.c0 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 0;
}

.c0:first-child {
  margin-top: 0;
}

.c0:last-child {
  margin-bottom: 0;
}

.c0 .c1 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

<hundefined
  className="c0"
/>
`;
